--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@ function checkImageExists(imageUrl, callBack) {
 	imageData.src = imageUrl;
 }
 
-var imageFile = '/splash_files/check.jpg';
+var imageFile = 'splash_files/check.jpg';
 
 checkImageExists(imageFile, function(existsImage) {
 	if(existsImage == true) {
@@ -26,11 +26,14 @@ checkImageExists(imageFile, function(existsImage) {
 });
 
 function jump() {
-   if (file == '0')
-       window.location.href = "/cgi-bin/luci";
-   else
-       window.location.href = "splash.html";
-}
+	console.log(file);
+	if (file == '0'){
+		window.location.href = "cgi-bin/luci";		
+	}
+	else{
+		window.location.href = "splash.html";
+	}
+ }
 
 </script>
 
@@ -39,7 +42,7 @@ function jump() {
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="refresh" content="0; URL=/cgi-bin/luci" />
+<!-- <meta http-equiv="refresh" content="0; URL=/cgi-bin/luci" /> -->
 </head>
 <body onload="jump();" style="background-color: black"></body>
 </body>
