--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,8 @@
+<!doctype html>
+<html lang="en">
+<head>
 
+  <meta charset="utf-8">
 <script>
 
 file = 0;
@@ -13,7 +17,6 @@ function checkImageExists(imageUrl, callBack) {
 	};
 	imageData.src = imageUrl;
 }
-
 var imageFile = 'splash_files/check.jpg';
 
 checkImageExists(imageFile, function(existsImage) {
@@ -28,21 +31,15 @@ checkImageExists(imageFile, function(existsImage) {
 function jump() {
 	console.log(file);
 	if (file == '0'){
-		window.location.href = "cgi-bin/luci";		
+		//window.location.href = "cgi-bin/luci";		
 	}
 	else{
-		window.location.href = "splash.html";
+		//window.location.href = "splash.html";
 	}
  }
 
 </script>
 
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Cache-Control" content="no-cache" />
-<!-- <meta http-equiv="refresh" content="0; URL=/cgi-bin/luci" /> -->
 </head>
 <body onload="jump();" style="background-color: black"></body>
 </body>
