--- a/www/splash.html
+++ b/www/splash.html
@@ -70,7 +70,7 @@ $( document ).ready(function() {
 		</div>
 	</div>
 
-	<footer class="whitef">
+	<footer>
 		<a href="http://www.ofmodemsandmen.com" target="_blank">ROOter</a> Splash Page by <a href="https://github.com/soif" target="_blank">Soif</a> and <a href="https://forums.whirlpool.net.au/user/483126" target="_blank">Dairyman</a>
 	</footer>
 
