Fix title + cleanup

--- a/www/status.html
+++ b/www/status.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-	<title>ROOTer Modem Status - LuCI</title>
+	<title>Modem Status - ROOTer</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,29 +13,9 @@
 
 	<link rel="SHORTCUT ICON" href="luci-static/rooter/img/favicon.gif">
 	<link rel="icon" type="image/gif" href="luci-static/rooter/img/favicon.gif">
-
-    <style type="text/css">
-
-	.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-
-body {
-	background-color: #CCC;
-}
-    .lang_enSoftware p {
-	text-align: center;
-	font-size: 36px;
-	font-weight: bold;
-}
-    </style>
-	</head>
+ </head>
 
  <body id='rooterSplashStatus' class='rooterSplash'>
-
 
 	<div class='rooterPageHead'>
 			<div class="rooterHeadTitle">Modem Status</div>
@@ -154,10 +134,6 @@ body {
 		}
 	});
 </script>
-
-<style>
-
-</style>
 
 		<noscript>
 			<div class="alert-message warning">
