--- a/www/splash.html
+++ b/www/splash.html
@@ -63,7 +63,7 @@ $( document ).ready(function() {
 
 			<a href='http://www.ofmodemsandmen.com'>
 			<div class="rooterItem" id="">
-				<div class="rooterItemTitle"><i class='icon icon-home'></i> ROOter Home</div>
+				<div class="rooterItemTitle"><i class='icon icon-earth'></i> ROOter Home</div>
 				<div class="rooterItemDesc">Find out all about new ROOter features and firmware availability.</div>
 			</div>
 			</a>
