--- a/www/status.html
+++ b/www/status.html
@@ -213,7 +213,7 @@
 		</div>
 
 		<div class="modemStatusBlock">
-			<h3><i class="icon icon-signal"></i> Device - <span class="msCell" id='msCell_conntype'><span></span></span></h3>
+			<h3><i class="icon icon-plug"></i> Device - <span class="msCell" id='msCell_conntype'><span></span></span></h3>
 
 			<div class='modemStatusRow modemStatusRow2'>
 				<div class='msCell' id='msCell_modem'>
