--- a/www/splash.html
+++ b/www/splash.html
@@ -71,9 +71,18 @@ $( document ).ready(function() {
 		</div>
 	</div>
 
-	<footer>
-		<a href="http://www.ofmodemsandmen.com" target="_blank">ROOter</a> Splash Page by <a href="https://github.com/soif" target="_blank">Soif</a> and <a href="https://forums.whirlpool.net.au/user/483126" target="_blank">Dairyman</a>
-	</footer>
+	<div class='rooterPageFoot'>
+		<div class="rooterFootMenu">
+			<ul>
+				<li><a href="splash.html"><i class='icon icon-home'></i> Home</a> | </li>
+				<li><a href="status.html"><i class='icon icon-signal'></i> Status</a> | </li>
+				<li><a href="cgi-bin/luci/"><i class='icon icon-cog'></i> Admin</a></li>
+			</ul>
+		</div>
+		<div class="rooterFootCredits">
+			<a href="http://www.ofmodemsandmen.com" target="_blank">ROOter</a> Splash Page by <a href="https://github.com/soif" target="_blank">Soif</a> and <a href="https://forums.whirlpool.net.au/user/483126" target="_blank">Dairyman</a>
+		</div>
+	</div>
 
  </body>
 </html>
