--- a/www/status.html
+++ b/www/status.html
@@ -137,12 +137,12 @@
 
 		<noscript>
 			<div class="alert-message warning">
-				<strong>JavaScript required!</strong><br />
+				<strong><i class="icon icon-warning"></i> JavaScript required!</strong><br />
 				You must enable JavaScript in your browser or LuCI will not work properly.
 			</div>
 		</noscript>
 
-		<div id='warn_login' class="alert-message">Enter your credentials : <input name='luci_username' id='luci_username' placeholder="user name"> <input name='luci_password' id='luci_password' type='password' placeholder="password"></div>
+		<div id='warn_login' class="alert-message"><i class="icon icon-warning"></i> Enter your credentials : <input name='luci_username' id='luci_username' placeholder="user name"> <input name='luci_password' id='luci_password' type='password' placeholder="password"></div>
 
 		<div class="modemStatusBlock">
 			<h3><div id="counter_div"  class='pull-right'><span id='counter_prefix'></span> <span id='counter_val'>0</span> sec</div>  
